--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babycakes",
-  "homepage": "https://liamandell.github.io/Babycakes/",
+  "homepage": "https://liamandell.github.io/Babycakes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
